<resources>
    <string name="google_maps_key_course">AIzaSyCMGUUuJiVCUNfh4iDvu5KNVmRbxNyzIzY</string>
    <string name="app_name">Delivery</string>
    <string name="tag_client">CLIENTE</string>
    <string name="tag_client_lowercase">Cliente</string>
    <string name="tag_delivery">REPARTIDOR</string>
    <string name="tag_delivery_lowercase">Repartidor</string>
    <string name="tag_restaurant">RESTAURANTE</string>
    <string name="tag_paid_out">PAGADO</string>
    <string name="tag_prepared">PREPARADO</string>
    <string name="tag_on_the_way">EN CAMINO</string>
    <string name="tag_delivered">ENTREGADO</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="register_now">Registrate ahora…</string>
    <string name="check_in">Registrarse</string>
    <string name="name">Nombre(s)</string>
    <string name="surnames">Apellidos</string>
    <string name="phone">Teléfono</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="return_to_log">Volver a iniciar sesión…</string>
    <string name="this_field_is_required">Este campo es obligatorio.</string>
    <string name="failed_to_register_user">Error al registrar el usuario.</string>
    <string name="failed_to_login">Error al iniciar sesión.</string>
    <string name="wrong_credentials">Credenciales incorrectas.</string>
    <string name="invalid_email">Correo electrónico inválido.</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden.</string>
    <string name="fill_in_your_information">Completa tu información</string>
    <string name="accept">Aceptar</string>
    <string name="skip">Omitir</string>
    <string name="operation_cancelled">Operación cancelada.</string>
    <string name="failed_to_update_user_information">Error al actualizar la información del usuario.</string>
    <string name="categories">Categorías</string>
    <string name="profile">Perfil</string>
    <string name="orders">Pedidos</string>
    <string name="product">Productos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_role">Cambiar de rol</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="select_your_role">Selecciona tu rol</string>
    <string name="read_only_field">Campo de solo lectura.</string>
    <string name="add_category">Agregar categoría</string>
    <string name="name_category">Nombre de la categoría</string>
    <string name="error_adding_category">Error al agregar la categoría.</string>
    <string name="error_adding_product">Error al agregar el producto.</string>
    <string name="you_must_capture_or_select_an_image">Debe capturar o seleccionar una imagen.</string>
    <string name="failed_to_get_all_categories">Error al obtener todas las categorías.</string>
    <string name="add_product">Agregar producto</string>
    <string name="product_name">Nombre</string>
    <string name="description">&lt;b>Descripción:&lt;/b> %1$s</string>
    <string name="price">&lt;b>Precio:&lt;/b> $%1$.2f MXN</string>
    <string name="category">Categoría</string>
    <string name="press_again_to_exit">Oprima de nuevo para salir.</string>
    <string name="you_must_select_a_category">Debe seleccionar una categoría.</string>
    <string name="failed_to_get_all_products">Error al obtener todos los productos.</string>
    <string name="add_to_the_list">Agregar a la lista</string>
    <string name="detail_total_price">&lt;b>Precio total:&lt;/b> $%1$.2f MXN</string>
    <string name="amount">Cantidad</string>
    <string name="product_added_successfully">Producto agregado exitosamente.</string>
    <string name="update_quantity">Actualizar cantidad</string>
    <string name="list_of_products">Lista de productos</string>
    <string name="my_product_list">Mi lista de productos</string>
    <string name="total">Total</string>
    <string name="to_pay">Pagar</string>
    <string name="product_detail">Detalle del producto</string>
    <string name="one">1</string>
    <string name="choose_where_to_receive_your_purchase">Elige dónde recibir tu compra</string>
    <string name="continues">Continuar</string>
    <string name="fill_in_these_details">Completa estos datos</string>
    <string name="tag_suburb">Colonia</string>
    <string name="tag_address">Dirección</string>
    <string name="address">&lt;b>Dirección:&lt;/b> %1$s</string>
    <string name="suburb">&lt;b>Colonia:&lt;/b> %1$s</string>
    <string name="reference_point">Punto de referencia</string>
    <string name="add_address">Agregar dirección</string>
    <string name="my_addresses">Mis direcciones</string>
    <string name="new_address">Nueva dirección</string>
    <string name="localization_is_disabled">La localización está deshabilitada…</string>
    <string name="you_must_select_a_landmark">Debes seleccionar un punto de referencia.</string>
    <string name="error_getting_latitude_and_longitude">Error al obtener la latitud y longitud, intenta de nuevo.</string>
    <string name="failed_to_get_all_address">Error al obtener todas las direcciones.</string>
    <string name="you_must_select_an_address">Debe seleccionar una dirección.</string>
    <string name="error_creating_order">Error al crear la orden.</string>
    <string name="unknown">Desconocido.</string>
    <string name="order">Orden: %1$s</string>
    <string name="number_of_order">Número de orden</string>
    <string name="failed_to_get_all_orders">Error al obtener las ordenes.</string>
    <string name="track_order">Rastrear pedido</string>
    <string name="description_text_only">Descripción</string>
    <string name="price_next_only">Precio</string>
    <string name="order_date">&lt;b>Fecha de pedido:&lt;/b> %1$s</string>
    <string name="client">&lt;b>Cliente:&lt;/b> %1$s %2$s</string>
    <string name="delivery">&lt;b>Repartidor:&lt;/b> %1$s %2$s</string>
    <string name="deliver">&lt;b>Entregar en:&lt;/b> %1$s Col. %2$s</string>
    <string name="actual_status">&lt;b>Estado actual:&lt;/b> %1$s</string>
    <string name="assigned_delivery_man">&lt;b>Repartidor asignado:&lt;/b> %1$s %2$s</string>
    <string name="total_products">&lt;b>Total de productos:&lt;/b> %1$d</string>
    <string name="assign_dealer">Asignar repartidor</string>
    <string name="failed_to_assign_dealer">Error al asignar el repartidor.</string>
    <string name="start_delivery">Iniciar entrega</string>
    <string name="back_to_map">Volver al mapa</string>
    <string name="my_position">Mi posición</string>
    <string name="latitude">Latitud: %1$.5f</string>
    <string name="longitude">Longitud: %1$.5f</string>
    <string name="delivery_route">Ruta de entrega</string>
    <string name="customer_position">Posición del cliente</string>
    <string name="dealer_position">Posición del repartidor</string>
    <string name="map_view">Vista de mapa</string>
    <string name="satellite_view">Vista de satélite</string>
    <string name="center_position">Posición al centro</string>
    <string name="focus_my_position">Enfocar mi posición</string>
    <string name="deliver_order">Entregar pedido</string>
    <string name="press_to_call">Oprime para llamar</string>
    <string name="the_telephone_permission_is_disabled">El permiso de Teléfono esta deshabilitado.</string>
    <string name="deliver_here">Entregar aquí.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>